[gd_scene load_steps=7 format=3 uid="uid://bnp000d13b8yh"]

[ext_resource type="Texture2D" uid="uid://rrb8co1dhmsl" path="res://Entities/Tiles/Textures/room_sprites.png" id="1_cxier"]
[ext_resource type="Script" uid="uid://cfqdbv02y6x5b" path="res://Entities/Objects/Others/UnseenArea/unseen_area.gd" id="1_obwhf"]
[ext_resource type="PackedScene" uid="uid://b3brxlf5d05qp" path="res://Entities/Objects/Interactables/Components/AreaEnterComponent/area_enter_component.tscn" id="2_0xp5c"]
[ext_resource type="AudioStream" uid="uid://cxitvk36sjeyc" path="res://Entities/Objects/Others/UnseenArea/SFXs/section_door_in.wav" id="3_57wrc"]
[ext_resource type="AudioStream" uid="uid://dcuktldohidyx" path="res://Entities/Objects/Others/UnseenArea/SFXs/section_door_out.wav" id="4_go6la"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57wrc"]
resource_local_to_scene = true
size = Vector2(8, 48)

[node name="UnseenArea" type="Node2D"]
script = ExtResource("1_obwhf")

[node name="SectionDoorSprite" type="Sprite2D" parent="."]
position = Vector2(-41, 0)
texture = ExtResource("1_cxier")
region_enabled = true
region_rect = Rect2(72, 0, 8, 48)

[node name="AreaEnterComponent" parent="SectionDoorSprite" instance=ExtResource("2_0xp5c")]
position = Vector2(41, 0)

[node name="CollisionShape2D" parent="SectionDoorSprite/AreaEnterComponent" index="0"]
position = Vector2(-41, 0)
shape = SubResource("RectangleShape2D_57wrc")

[node name="HiddenArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="HiddenArea"]
layout_mode = 0
offset_left = 7.0
offset_top = -18.0
offset_right = 47.0
offset_bottom = 22.0
color = Color(0.410312, 0.67774, 0.848289, 1)

[node name="EnterAreaAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_57wrc")

[node name="ExitAreaAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_go6la")

[connection signal="target_enter_area" from="SectionDoorSprite/AreaEnterComponent" to="." method="_on_area_enter_component_target_enter_area"]

[editable path="SectionDoorSprite/AreaEnterComponent"]
